Melhorias no menu e no rodapé
Melhorias no menu e no rodapé

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <div  class="foto2">
         <div class="titulo_foto">
-            <span>Cidade do sol</span>
+            <span>Natal: uma experiência única</span>
         </div>
     </div>
 
