primeira ideia para o mini destaque
Implementei a minha primeira ideia do mini_destaque.

--- a/index.html
+++ b/index.html
@@ -48,8 +48,12 @@
 
             <div id="destaques">
                 <div class="mini_destaque">
-                    <p>Praias Paradiziacas com um clima único
-                    </p>
+                    <img src="imagens/nome_natal.jpg" alt="">
+                    <div class="conteudo_mini_destaque">
+                        <h3>Praias</h3>
+                        <p>Praias Paradiziacas com um clima único. <a href="praias.html">Leia mais...</a>
+                        </p>
+                    </div>
 
                 </div>
 
@@ -57,14 +61,17 @@
                     <img src="imagens/forte.png" >
                     <div class="conteudo_mini_destaque">
                         <h3>Pontos Históricos</h3>
-                        <p>Pontos históricos que mostram o histórico da cidade</p>
+                        <p>A história vista por prédios antigos. Viva aqui a antiga Natal! <a href="pontos_historicos.html">Leia mais...</a></p>
+                        
                     </div>
-                    
-
                 </div>
 
                 <div class="mini_destaque">
-                    <p>Os restãorantes mais badalados da região</p>
+                    <img src="imagens/camaroes.jpg" alt="">
+                    <div class="conteudo_mini_destaque">
+                        <h3>Restaurantes</h3>
+                        <p>Os restaurantes mais badalados da região. <a href="restaurantes.html">Leia mais...</a></p>
+                    </div>
 
                 </div>
 
