melhoria na aba pontos turísticos

--- a/pontos_historicos.html
+++ b/pontos_historicos.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style_main.css">
+    <link rel="stylesheet" type="text/css"  href="css/style_pontos_historicos.css">
     <title>Lazer e Turísmo Natal</title>
 </head>
 
@@ -31,9 +32,19 @@
         </div><!--Fim do menu futuante-->
     </div> <!--Fim do fundo do menu-->
 
-    <div  class="foto2">
 
-    </div>
+        <div class="fundo_artigo"  >
+                <div class="conteudo_artigo">
+                    <h3>1. Fortaleza dos Reis Magos</h3>
+                    <img src="imagens/forte_dos_reis_magos.webp" width="300px" alt="">
+
+                    <p>Localizado em uma das pontas da pennínsula TartaAzul, a Fortaleza dos Reis Magos carrega uma imensa história sobre o perído do encontro dos Portuguêses com os povos nativos Brasileiros.</p>
+                    <p>Possivelmente a fortaleza teve sua construção iniciada apenas em 1603. Em 1630, era mencionada como totalmente concluída, na sua forma atual. Acredita-se que seu projeto e os acréscimos posteriores, sejam de autoria do engenheiro-mor do Brasil, Francisco de Frias Mesquita. De 1634 a 1654, esteve sob o domínio holandês, chamando-se Castelo Ceulen. Ao longo dos seculos as condições do Forte se deterioraram e não houve nenhuma modernização ou ampliação de sua artilharia.</p>
+                    <p>Em 1894, o Forte dos Reis Magos deixou de ser considerado um elemento defensivo para o Exército e foi desativado em 1904, mas chegou a ser usado durante a 1ª Guerra Mundial. Passou para a guarda da Marinha no início do século XX, quando ocorreu a instalação de um farol que funcionou, também, como morada do faroleiro e sua família. Após sofrer um grave processo de degradação, o Forte foi tombado pelo Iphan, em 1949, e restaurado entre 1953 e 1958.</p>
+                    <div style="clear: both;"></div>
+                </div>
+                
+        </div>
 
 
     <div id="conteiner_rodape">
