Acrescentei a barra de navegação responsivo
Acrescentei a barra de navegação responsivo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </li>
 
                 <li>
-                    <a class="pontos_historicos" href="pontos_historicos.html">Pontos Históricos</a>
+                    <a class="pontos_historicos" href="pontos_historicos.html">História</a>
                 </li>
                 <li>
                     <a class="praias" href="praias.html">Praias</a>
