--- a/pontos_historicos.html
+++ b/pontos_historicos.html
@@ -15,8 +15,9 @@
            
            <!--Baarra de navegação responsiva -->
           <nav>
-            <div></div>
-            <div></div>
+            <div>
+                <h1>Cidade do Sol</h1>
+            </div>
             <div class="mobile-menu">
                 <div class="line1"></div>
                 <div class="line2"></div>
