--- a/pontos_historicos.html
+++ b/pontos_historicos.html
@@ -15,8 +15,8 @@
            
            <!--Baarra de navegação responsiva -->
           <nav>
-            <div>
-                <h1>Cidade do Sol</h1>
+            <div >
+                <h1 class="logo">Cidade do Sol</h1>
             </div>
             <div class="mobile-menu">
                 <div class="line1"></div>
