--- a/praias.html
+++ b/praias.html
@@ -14,8 +14,9 @@
            
            <!--Baarra de navegação responsiva -->
           <nav>
-            <div></div>
-            <div></div>
+            <div >
+                <h1 class="logo">Cidade do Sol</h1>
+            </div>
             <div class="mobile-menu">
                 <div class="line1"></div>
                 <div class="line2"></div>
