--- a/praias.html
+++ b/praias.html
@@ -52,7 +52,16 @@
     <div id="conteiner_rodape">
         <div id="conteudo_rodape">
             <div class="conteudo_direita" >
-                <a href="">Instagram | github | linkedim</a>
+                <a href="https://www.instagram.com/ana_dev_404/">
+                    <img  class="icone" src="imagens/instagram.png" alt="">
+                </a>
+                <a href="https://www.linkedin.com/in/ana-paula-lima-045678266/">
+                    <img class="icone" src="imagens/linkedin.png" alt="">
+                </a>
+
+                <a href="https://github.com/ana112358">
+                    <img class="icone" src="imagens/github.png" alt="">
+                </a>
             </div>
 
             <div class="conteudo_esquerda">
