--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <div  class="foto2">
         <div class="titulo_foto">
-            <span>Natal: uma experiência única</span>
+            <span>Natal / RN</span>
         </div>
     </div>
 
@@ -106,7 +106,16 @@
     <div id="conteiner_rodape">
         <div id="conteudo_rodape">
             <div class="conteudo_direita" >
-                <a href="">Instagram | github | linkedim</a>
+                <a href="https://www.instagram.com/ana_dev_404/">
+                    <img  class="icone" src="imagens/instagram.png" alt="">
+                </a>
+                <a href="https://www.linkedin.com/in/ana-paula-lima-045678266/">
+                    <img class="icone" src="imagens/linkedin.png" alt="">
+                </a>
+
+                <a href="https://github.com/ana112358">
+                    <img class="icone" src="imagens/github.png" alt="">
+                </a>
             </div>
 
             <div class="conteudo_esquerda">
