Aprimoramento de imagem

--- a/pontos_historicos.html
+++ b/pontos_historicos.html
@@ -45,29 +45,14 @@
         </div><!--Fim do menu futuante-->
     </div> <!--Fim do fundo do menu-->
 
+    <!--Carrossel de imagens-->
 
 
 
-        <div class="conteinerFotos">
+    <!--Fim do carrossel de imagens-->
 
-                <div class="fotoDestaque fotoDestaque1">
 
-                </div>
-
-                <div class="fotoDestaque fotoDestaque2">
-
-                </div >
-
-                <div class="fotoDestaque fotoDestaque3">
-
-                </div>
-                <div class="fotoDestaque fotoDestaque4">
-
-                </div>
-                <div class="fotoDestaque fotoDestaque5">
-
-                </div>
-        </div>
+        
 
 
         <div class="fundo_artigo"  >
@@ -102,7 +87,7 @@
                 <h5> &copy; Copyright 2024 - Ana Paula</h5>
             </div>
 
-            <div style="clear: both;"></div>
+      
         </div><!--Fim do conteudo_rodape-->
 
     </div><!--Fim do Conteiner Rodapé-->
