--- a/index.html
+++ b/index.html
@@ -106,16 +106,23 @@
     <div id="conteiner_rodape">
         <div id="conteudo_rodape">
             <div class="conteudo_direita" >
-                <a href="https://www.instagram.com/ana_dev_404/">
-                    <img  class="icone" src="imagens/instagram.png" alt="">
-                </a>
-                <a href="https://www.linkedin.com/in/ana-paula-lima-045678266/">
-                    <img class="icone" src="imagens/linkedin.png" alt="">
-                </a>
-
-                <a href="https://github.com/ana112358">
-                    <img class="icone" src="imagens/github.png" alt="">
-                </a>
+                <div>
+                    <a href="https://www.instagram.com/ana_dev_404/">
+                        <img  class="icone" src="imagens/instagram.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="https://www.linkedin.com/in/ana-paula-lima-045678266/">
+                        <img class="icone" src="imagens/linkedin.png" alt="">
+                    </a>
+                </div>
+               
+                <div>
+                    <a href="https://github.com/ana112358">
+                        <img class="icone" src="imagens/github.png" alt="">
+                    </a>
+                </div>
+               
             </div>
 
             <div class="conteudo_esquerda">
