html e css do carrossel

--- a/pontos_historicos.html
+++ b/pontos_historicos.html
@@ -47,6 +47,41 @@
 
     <!--Carrossel de imagens-->
 
+    <div class="carrossel">
+
+        <div class="conteudo_carrossel">
+            <input type="radio" name="botao1" id="botao1">
+            <input type="radio" name="botao2" id="botao2">
+            <input type="radio" name="botao3" id="botao3">
+
+            <div class="caixa-carrossel primeira">
+                <img src="imagens/carrossel/forte_desktop.png" alt="">
+                <img src="imagens/carrossel/forte_mobile.png" class="img_mobile" alt="">
+            </div>
+
+            <div class="caixa-carrossel">
+                <img src="imagens/carrossel/forte_desktop.png"  alt="">
+                <img src="imagens/carrossel/forte_mobile.png" class="img_mobile" alt="">
+            </div>
+
+            <div class="caixa-carrossel">
+                <img src="imagens/carrossel/forte_desktop.png" alt="">
+                <img src="imagens/carrossel/forte_mobile.png"  class="img_mobile"alt="">
+            </div>
+
+            <div class="nav-auto">
+                <div class="auto_but1"></div>
+                <div class="auto_but2"></div>
+                <div class="auto_but3"></div>
+            </div>
+            <div class="nav-manual">
+                <label for="botao1" class="manual_but"></label>
+                <label for="botao2" class="manual_but"></label>
+                <label for="botao3" class="manual_but"></label>
+            </div>
+        </div>
+
+    </div>
 
 
     <!--Fim do carrossel de imagens-->
