carrossel automático com JavaScript

--- a/pontos_historicos.html
+++ b/pontos_historicos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style_main.css">
     <link rel="stylesheet" type="text/css"  href="css/style_pontos_historicos.css">
+    <script src="javascript/carrossel.js" defer></script>
     <title>Lazer e Turísmo Natal</title>
 </head>
 
@@ -55,17 +56,17 @@
             <input type="radio" name="botao3" id="botao3">
 
             <div class="caixa-carrossel primeira">
-                <img src="imagens/carrossel/forte_desktop.png" alt="">
+                <img src="imagens/carrossel/forte_desktop.png" class="img_desktop" alt="">
                 <img src="imagens/carrossel/forte_mobile.png" class="img_mobile" alt="">
             </div>
 
             <div class="caixa-carrossel">
-                <img src="imagens/carrossel/forte_desktop.png"  alt="">
-                <img src="imagens/carrossel/forte_mobile.png" class="img_mobile" alt="">
+                <img src="imagens/carrossel/centro_turismo_desktop.png" class="img_desktop" alt="">
+                <img src="imagens/carrossel/centro_turismo_mobile.png" class="img_mobile" alt="">
             </div>
 
             <div class="caixa-carrossel">
-                <img src="imagens/carrossel/forte_desktop.png" alt="">
+                <img src="imagens/carrossel/forte_desktop.png" class="img_desktop" alt="">
                 <img src="imagens/carrossel/forte_mobile.png"  class="img_mobile"alt="">
             </div>
 
