--- a/pontos_historicos.html
+++ b/pontos_historicos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style_main.css">
     <link rel="stylesheet" type="text/css"  href="css/style_pontos_historicos.css">
+    <link rel="shortcut icon" href="imagens/sol_icone.png">
     <script src="javascript/carrossel.js" defer></script>
     <title>Lazer e Turísmo Natal</title>
 </head>
