--- a/praias.html
+++ b/praias.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style_main.css">
     <link rel="shortcut icon" href="imagens/sol_icone.png">
-    <title>Lazer e Turísmo Natal</title>
+    <title>Lazer e Turismo Natal</title>
 </head>
 
 <body id="praias">
